Avoided large layout shifts and Eliminated render-blocking resources

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@
   --bs-primary-rgb: 111, 66, 193;
   --bs-secondary: #6c757d;
   --bs-secondary-rgb: 108, 117, 125;
+  --bs-heading-font-color: #e2e8f0;
   --bs-success: #198754;
   --bs-success-rgb: 25, 135, 84;
   --bs-info: #0dcaf0;
@@ -49,6 +50,7 @@
   --bs-body-line-height: 1.5;
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --bs-heading-font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
   /* Links */
   --bs-link-color: #2563eb;
@@ -111,19 +113,17 @@ body {
 
 hr {
   margin: 1rem 0;
-  color: inherit;
-  border: 0;
-  border-top: 1px solid;
-  opacity: 0.25;
+  border: none;
+  border-top: 1px solid rgba(255, 255, 255, 0.25);
 }
 
- h3, .h3, h2, .h2, h1, .h1 {
+h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: var(--bs-heading-font-family);
   font-weight: 700;
   line-height: 1.2;
-  color: #e2e8f0;
+  color: var(--bs-heading-font-color); 
 }
 
 h1, .h1 {
